@@ -1,0 +1,14 @@
+package org.testng.internal.objects;
+
+import org.testng.IInjectorFactory;
+
+public interface ISuiteContext {
+
+  String getParentModule();
+
+  String getGuiceStage();
+
+  String getName();
+
+  IInjectorFactory getInjectorFactory();
+}
