@@ -1,0 +1,9 @@
+package test.guice.issue279;
+
+public class Car implements Vehicle {
+
+  @Override
+  public void drive() {
+
+  }
+}
