@@ -1,0 +1,7 @@
+package test.guice.issue279;
+
+public interface Greeter {
+
+  String greet(String name);
+
+}
