@@ -1,0 +1,11 @@
+package test.guice.issue279;
+
+import org.testng.annotations.Test;
+
+public class TestClassWithoutListener {
+
+  @Test
+  public void testMethod() {
+  }
+
+}
